<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TextBridge</string>
    <string name="nav_send">发送</string>
    <string name="nav_history">历史</string>
    <string name="nav_settings">配置</string>
    <string name="transport_mode">发送方式</string>
    <string name="transport_lan">局域网</string>
    <string name="transport_adb">USB/ADB</string>
    <string name="transport_bluetooth">蓝牙</string>
    <string name="computer_address">电脑地址</string>
    <string name="scan_computer">扫描电脑</string>
    <string name="scan_computer_progress">扫描中...</string>
    <string name="select_computer">选择电脑</string>
    <string name="discovery_port">发现端口</string>
    <string name="adb_port">服务端口</string>
    <string name="bluetooth_permission">授权蓝牙</string>
    <string name="bluetooth_select_device">选择蓝牙电脑</string>
    <string name="bluetooth_no_paired_devices">无已配对设备</string>
    <string name="refresh">刷新</string>
    <string name="access_token">访问令牌</string>
    <string name="save_settings">保存配置</string>
    <string name="unsaved_settings">配置未保存</string>
    <string name="text_to_send">要发送的文本</string>
    <string name="send_mode">发送模式</string>
    <string name="send_mode_send_only">只发送</string>
    <string name="send_mode_send_then_enter">发送后按 Enter</string>
    <string name="send">发送</string>
    <string name="send_progress">发送中...</string>
    <string name="key_controls">控制键</string>
    <string name="shortcut_select_all">全选</string>
    <string name="shortcut_copy">复制</string>
    <string name="shortcut_paste">粘贴</string>
    <string name="shortcut_cut">剪切</string>
    <string name="shortcut_undo">撤销</string>
    <string name="status_idle">状态：待发送</string>
    <string name="send_history">历史记录</string>
    <string name="empty_history">暂无历史记录</string>
    <string name="clear_history">清空</string>
    <string name="delete_history_item">删除</string>
    <string name="clear_history_title">清空历史记录？</string>
    <string name="clear_history_message">这会删除手机上保存的所有发送历史。</string>
    <string name="clear_history_confirm">清空</string>
    <string name="cancel">取消</string>
</resources>
